[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemies/LandChaser.gd" type="Script" id=1]
[ext_resource path="res://_src/ph_land_chaser.png" type="Texture" id=2]
[ext_resource path="res://enemies/AI/AttackArea.gd" type="Script" id=3]
[ext_resource path="res://enemies/AI/AwarenessArea.gd" type="Script" id=4]
[ext_resource path="res://enemies/AI/FocusArea.gd" type="Script" id=5]
[ext_resource path="res://enemies/AI/DynamicCollisionShape.gd" type="Script" id=6]
[ext_resource path="res://enemies/AI/LedgeDetector.gd" type="Script" id=7]
[ext_resource path="res://ui/HealthBar.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=1]

[node name="LandChaser" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]
editor/display_folded = true
show_behind_parent = true
script = ExtResource( 3 )

[node name="Shape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 2 )

[node name="AwarenessArea" type="Area2D" parent="."]
editor/display_folded = true
show_behind_parent = true
script = ExtResource( 4 )

[node name="Shape" type="CollisionShape2D" parent="AwarenessArea"]
shape = SubResource( 3 )

[node name="FocusArea" type="Area2D" parent="."]
editor/display_folded = true
show_behind_parent = true
script = ExtResource( 5 )

[node name="Shape" type="CollisionShape2D" parent="FocusArea"]
shape = SubResource( 4 )

[node name="DynamicCollisionShape" type="CollisionShape2D" parent="."]
show_behind_parent = true
z_index = 1
shape = SubResource( 1 )
script = ExtResource( 6 )

[node name="LedgeDetector" type="Node2D" parent="."]
editor/display_folded = true
show_behind_parent = true
script = ExtResource( 7 )

[node name="FloorDetector" type="RayCast2D" parent="LedgeDetector"]

[node name="WallDetector" type="RayCast2D" parent="LedgeDetector"]

[node name="HealthBar" parent="." instance=ExtResource( 8 )]
[connection signal="flip" from="." to="HealthBar" method="_on_flip"]
[connection signal="health_changed" from="." to="HealthBar" method="_on_health_changed"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="AwarenessArea" to="." method="_on_AwarenessArea_body_entered"]
[connection signal="body_exited" from="FocusArea" to="." method="_on_FocusArea_body_exited"]
